WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289553
[Screen Time Refactoring] History fetching API does not work unless WKWebsiteDataStore has a delegate
https://bugs.webkit.org/show_bug.cgi?id=289553
Summary
[Screen Time Refactoring] History fetching API does not work unless WKWebsite...
Jessica Cheung
Reported
2025-03-11 11:36:41 PDT
rdar://145017247
Attachments
Add attachment
proposed patch, testcase, etc.
Jessica Cheung
Comment 1
2025-03-12 13:50:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42346
EWS
Comment 2
2025-03-14 01:21:33 PDT
Committed
292143@main
(6c635bbd1833): <
https://commits.webkit.org/292143@main
> Reviewed commits have been landed. Closing PR #42346 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug