Source/WebKit/UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm
@@ -67,12 +67,6 @@
 #import <pal/spi/ios/ManagedConfigurationSPI.h>
 #endif
 
-#if ENABLE(SCREEN_TIME)
-@interface STWebHistory (Staging_140439004)
-- (void)fetchAllHistoryWithCompletionHandler:(void (^)(NSSet<NSURL *> *urls, NSError *error))completionHandler;
-@end
-#endif
-
 namespace WebKit {
 
 static NSString* const WebKit2HTTPProxyDefaultsKey = @"WebKit2HTTPProxy";
@@ -341,41 +335,6 @@ void WebsiteDataStore::removeDataStoreWithIdentifier(const WTF::UUID& identifier
         });
     });
 }
-
-#if ENABLE(SCREEN_TIME)
-
-void WebsiteDataStore::removeScreenTimeData(const HashSet<URL>& websitesToRemove)
-{
-    if (![PAL::getSTWebHistoryClass() instancesRespondToSelector:@selector(fetchAllHistoryWithCompletionHandler:)])
-        return;
-
-    STWebHistoryProfileIdentifier profileIdentifier = nil;
-    if (configuration().identifier())
-        profileIdentifier = configuration().identifier()->toString();
-
-    RetainPtr webHistory = adoptNS([PAL::allocSTWebHistoryInstance() initWithProfileIdentifier:profileIdentifier]);
-
-    for (auto& url : websitesToRemove)
-        [webHistory deleteHistoryForURL:url];
-}
-
-void WebsiteDataStore::removeScreenTimeDataWithInterval(WallTime modifiedSince)
-{
-    STWebHistoryProfileIdentifier profileIdentifier = nil;
-    if (configuration().identifier())
-        profileIdentifier = configuration().identifier()->toString();
-
-    RetainPtr webHistory = adoptNS([PAL::allocSTWebHistoryInstance() initWithProfileIdentifier:profileIdentifier]);
-
-    if (!modifiedSince.isNaN()) {
-        NSTimeInterval timeInterval = modifiedSince.secondsSinceEpoch().seconds();
-        NSDate *date = [NSDate dateWithTimeIntervalSince1970:timeInterval];
-        RetainPtr dateInterval = adoptNS([[NSDateInterval alloc] initWithStartDate:date endDate:NSDate.now]);
-        [webHistory deleteHistoryDuringInterval:dateInterval.get()];
-    }
-}
-
-#endif
 
 String WebsiteDataStore::defaultWebsiteDataStoreDirectory(const WTF::UUID& identifier)
 {
